# kitchen-helper

./: .gitignore  README.md  db.sh  server.sh  website.sh  website.sln
website/: .env  .env.prod  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  Program.cs  README.md  _Imports.razor  angular.json  build.rs  package-lock.json  package.json  website.csproj
website/Account/: TokenAuthenticationRequest.cs  TokenAuthenticationResponse.cs  TokenAuthenticationService.cs  TokenAuthenticationStateProvider.cs
website/Layout/: MainLayout.razor  NavMenu.razor
website/Pages/: Home.razor
website/Pages/Account/: Login.razor  Login.razor.cs
website/Pages/Inventory/: Inventory.razor
website/Properties/: launchSettings.json
website/assets/css/: patternfly.min.css.map
website/src/: env.rs  index.html  main.rs  page.html
website/src/api/: login.rs
website/src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
website/src/app/authentication/: authentication.service.ts
website/src/app/inventory/: inventory.component.html  inventory.component.ts  inventory.service.ts
website/src/app/inventory/inventory-list/: Item.ts  inventory-list.component.html  inventory-list.component.ts
website/src/app/login/: login.component.html  login.component.ts
website/src/app/login/login-form/: User.ts  login-form.component.html  login-form.component.ts
website/src/components/: inventory.rs  login.rs  mod.rs
website/src/environments/: environment.development.ts
website/src/state/: login.rs
website/wwwroot/: index.html  main.css  patternfly.min.css
(+8 files in other folders)
