[package]
name = "website"
version = "0.1.0"
authors = ["Michael Rynkiewicz <michaelrynkiewicz3@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
dotenv = "0.15.0"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = "1.0.214"

[build-dependencies]
dotenv = "0.15.0"
